--- a/contact.html
+++ b/contact.html
@@ -9,12 +9,15 @@
 <body>
     <section id="contact-info">
         <div class="container">
+            <h0>WORK IN PROGRESS!!!</h0>
+            <!--
             <h1>Contact Me</h1>
-            <div class="contact-details">
+                <div class="contact-details">
                 <p><strong>Phone:</strong> (613) 981-5108</p>
                 <p><strong>Email:</strong> zencanham@gmailcom</p>
                 <p><strong>Address:</strong> K2G 5L5</p>
                 <p><strong>Away:</strong> Monday - Friday, 9:15 AM - 4:00 PM</p>
+            -->
             </div>
             <form id="contact-form">
                 <h2>Send Me a Message</h2>
