--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <section id="about">
         <div class="container">
             <h2>About Me</h2>
-            <p>I am a high school student currently living in Ottawa Ontario Canada, and I am your average programer (i.e. I love anime, games, coding, problem solving, building, breaking, staying up late, weapons and really most technology).</p>
+            <p>I am a high school student currently living in Ottawa, ON Canada, and I am your average programer (i.e. I love anime, games, coding, problem solving, building and breaking things, staying up late, weapons and really most technology).</p>
         </div>
     </section>
 
@@ -77,16 +77,16 @@
             <h2>My Skills</h2>
             <div class="skills">
                 <div class="skill">
-                    <h3>Skill 1</h3>
-                    <p>Dexterous. I find myself good at things like Origami, flying drones, solving Rubix cubes, roasting marshmellows, typing, magic and much more.</p>
+                    <h3>Skill 1: Dexterous</h3>
+                    <p>I find myself good at things like Origami, flying drones, solving Rubix cubes, roasting marshmellows, typing, magic and much more.</p>
                 </div>
                 <div class="skill">
-                    <h3>Skill 2</h3>
-                    <p>Memory. I have an above average memory, not quite photographic, but not a goldfish's memory at the least.</p>
+                    <h3>Skill 2: Good Memory</h3>
+                    <p>I have an above average memory, not quite photographic, but not a goldfish's memory at the least.</p>
                 </div>
                 <div class="skill">
-                    <h3>Skill 3</h3>
-                    <p>Curious. I am always eager to learn something new, and I find myself to be a fast learner, especially so with visual aids.</p>
+                    <h3>Skill 3: Curious</h3>
+                    <p>I am always eager to learn something new, and I find myself to be a fast learner, especially so with visual aids.</p>
                 </div>
             </div>
         </div>
