--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
     <section id="contact-info">
         <div class="container">
             <h1>WORK IN PROGRESS!!!</h1>
+            <h1>Currently no backend (Send Button don't work)</h1>
             <!--
             <h1>Contact Me</h1>
                 <div class="contact-details">
